dist/proman-with-ingress.yaml
---
# Source: proman/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proman-proman
spec:
  type: ClusterIP
  selector:
    app: proman
  ports:
    - port: 3000
      targetPort: 3000
---
# Source: proman/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proman-proman
  labels:
    app: proman
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proman
  template:
    metadata:
      labels:
        app: proman
    spec:
      containers:
        - name: proman
          image: "ghcr.io/jigle/proman:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName:proman-proman-data
---
# Source: proman/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proman-proman-ingress
  labels:
    app.kubernetes.io/name: proman
    app.kubernetes.io/instance: proman
  annotations:
    {}
spec:
  rules:
    - host: proman.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proman-proman
                port:
                  number: 3000
